test_regress/t/t_var_port2_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed into the Public Domain, for any use,
// without warranty, 2019 by Wilson Snyder.

module t (portwithoin);
   input portwithin;
endmodule
